--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxtjs/style-resources": "^1.0.0",
     "firebase": "^7.2.1",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "open-color": "^1.7.0"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.0.0"
+    "@nuxtjs/vuetify": "^1.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0"
   }
 }
